Bug 151521 - Applying paragraph styles with sub outline-level does not become folded content
Summary: Applying paragraph styles with sub outline-level does not become folded content
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-14 01:59 UTC by Jim Raykowski
Modified: 2023-09-12 06:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Steps to repro bug (30.51 KB, application/vnd.oasis.opendocument.text)
2022-10-14 01:59 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2022-10-14 01:59:54 UTC
Created attachment 183035 [details]
Steps to repro bug

Ah, that's what the line of code removed by the fix for bug 151387 was there for...

Steps to repro are given in the attached STR bug file.
Comment 1 Jim Raykowski 2022-10-14 04:17:31 UTC
The fix for the bug patch mentioned in my last post should have been bug 151315.
Comment 2 Jean-Baptiste Faure 2022-10-14 16:41:36 UTC
Confirmed in Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 3565c3c94c6bdad5ab0913d979fd4e97547488e6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Ubuntu_20.04_x86-64
Calc: threaded

Best regards. JBF
Comment 3 Commit Notification 2022-10-20 05:53:49 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a3238a8e35c9c649069ef67ffa83e0d83f25936b

tdf#151521 Fix para applied style sub-level remains visible

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.