tdf#151521 Fix para applied style sub-level remains visible

... when parent outline content is folded

Commit 22757917067d7c4e475228cec2a0dd4d2f900e95, removed making all outline content temporarily visible during style application. But it is needed so that paragraph applied stye sub-levels do not remain visible when outline-folding is set to include sub-levels as outline content. This patch fixes the cause of the bug reported in tdf#151315.

Change-Id: I4b8fd4bdd1ca08d65cf8fbb8c3f73ef7d00dcc2e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141357
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>